; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/proc/extr_generic.c_proc_symlink.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/proc/extr_generic.c_proc_symlink.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.proc_dir_entry = type { %struct.proc_dir_entry*, i32 }

@S_IFLNK = common dso_local global i32 0, align 4
@S_IRUGO = common dso_local global i32 0, align 4
@S_IWUGO = common dso_local global i32 0, align 4
@S_IXUGO = common dso_local global i32 0, align 4
@GFP_KERNEL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.proc_dir_entry* @proc_symlink(i8* %0, %struct.proc_dir_entry* %1, i8* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca %struct.proc_dir_entry*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.proc_dir_entry*, align 8
  store i8* %0, i8** %4, align 8
  store %struct.proc_dir_entry* %1, %struct.proc_dir_entry** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = load i32, i32* @S_IFLNK, align 4
  %10 = load i32, i32* @S_IRUGO, align 4
  %11 = or i32 %9, %10
  %12 = load i32, i32* @S_IWUGO, align 4
  %13 = or i32 %11, %12
  %14 = load i32, i32* @S_IXUGO, align 4
  %15 = or i32 %13, %14
  %16 = call %struct.proc_dir_entry* @__proc_create(%struct.proc_dir_entry** %5, i8* %8, i32 %15, i32 1)
  store %struct.proc_dir_entry* %16, %struct.proc_dir_entry** %7, align 8
  %17 = load %struct.proc_dir_entry*, %struct.proc_dir_entry** %7, align 8
  %18 = icmp ne %struct.proc_dir_entry* %17, null
  br i1 %18, label %19, label %56

19:                                               ; preds = %3
  %20 = load i8*, i8** %6, align 8
  %21 = call i32 @strlen(i8* %20)
  %22 = load %struct.proc_dir_entry*, %struct.proc_dir_entry** %7, align 8
  %23 = getelementptr inbounds %struct.proc_dir_entry, %struct.proc_dir_entry* %22, i32 0, i32 1
  store i32 %21, i32* %23, align 8
  %24 = add nsw i32 %21, 1
  %25 = load i32, i32* @GFP_KERNEL, align 4
  %26 = call %struct.proc_dir_entry* @kmalloc(i32 %24, i32 %25)
  %27 = load %struct.proc_dir_entry*, %struct.proc_dir_entry** %7, align 8
  %28 = getelementptr inbounds %struct.proc_dir_entry, %struct.proc_dir_entry* %27, i32 0, i32 0
  store %struct.proc_dir_entry* %26, %struct.proc_dir_entry** %28, align 8
  %29 = load %struct.proc_dir_entry*, %struct.proc_dir_entry** %7, align 8
  %30 = getelementptr inbounds %struct.proc_dir_entry, %struct.proc_dir_entry* %29, i32 0, i32 0
  %31 = load %struct.proc_dir_entry*, %struct.proc_dir_entry** %30, align 8
  %32 = icmp ne %struct.proc_dir_entry* %31, null
  br i1 %32, label %33, label %52

33:                                               ; preds = %19
  %34 = load %struct.proc_dir_entry*, %struct.proc_dir_entry** %7, align 8
  %35 = getelementptr inbounds %struct.proc_dir_entry, %struct.proc_dir_entry* %34, i32 0, i32 0
  %36 = load %struct.proc_dir_entry*, %struct.proc_dir_entry** %35, align 8
  %37 = bitcast %struct.proc_dir_entry* %36 to i8*
  %38 = load i8*, i8** %6, align 8
  %39 = call i32 @strcpy(i8* %37, i8* %38)
  %40 = load %struct.proc_dir_entry*, %struct.proc_dir_entry** %5, align 8
  %41 = load %struct.proc_dir_entry*, %struct.proc_dir_entry** %7, align 8
  %42 = call i64 @proc_register(%struct.proc_dir_entry* %40, %struct.proc_dir_entry* %41)
  %43 = icmp slt i64 %42, 0
  br i1 %43, label %44, label %51

44:                                               ; preds = %33
  %45 = load %struct.proc_dir_entry*, %struct.proc_dir_entry** %7, align 8
  %46 = getelementptr inbounds %struct.proc_dir_entry, %struct.proc_dir_entry* %45, i32 0, i32 0
  %47 = load %struct.proc_dir_entry*, %struct.proc_dir_entry** %46, align 8
  %48 = call i32 @kfree(%struct.proc_dir_entry* %47)
  %49 = load %struct.proc_dir_entry*, %struct.proc_dir_entry** %7, align 8
  %50 = call i32 @kfree(%struct.proc_dir_entry* %49)
  store %struct.proc_dir_entry* null, %struct.proc_dir_entry** %7, align 8
  br label %51

51:                                               ; preds = %44, %33
  br label %55

52:                                               ; preds = %19
  %53 = load %struct.proc_dir_entry*, %struct.proc_dir_entry** %7, align 8
  %54 = call i32 @kfree(%struct.proc_dir_entry* %53)
  store %struct.proc_dir_entry* null, %struct.proc_dir_entry** %7, align 8
  br label %55

55:                                               ; preds = %52, %51
  br label %56

56:                                               ; preds = %55, %3
  %57 = load %struct.proc_dir_entry*, %struct.proc_dir_entry** %7, align 8
  ret %struct.proc_dir_entry* %57
}

declare dso_local %struct.proc_dir_entry* @__proc_create(%struct.proc_dir_entry**, i8*, i32, i32) #1

declare dso_local %struct.proc_dir_entry* @kmalloc(i32, i32) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @strcpy(i8*, i8*) #1

declare dso_local i64 @proc_register(%struct.proc_dir_entry*, %struct.proc_dir_entry*) #1

declare dso_local i32 @kfree(%struct.proc_dir_entry*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
